--- a/index.html
+++ b/index.html
@@ -85,16 +85,20 @@
         <b>實收(收店時錢袋總金額) : </b>
         <input type="number" name="name" placeholder="money" id="finalMoney">
         <br>
+
+        <br>
+        <!-- <button id="submit" onclick="handle_click(this)">complete</button> -->
+        <button id="submit">calculate</button>
+        <br>
+
         <br>
         <b>應收 :</b>
         <div id="expected_income"></div>
         <b>結餘(實收 - 應收) :</b>
         <div id="balence"></div>
-        
         <br>
-        <!-- <button id="submit" onclick="handle_click(this)">complete</button> -->
-        <button id="submit">complete</button>
         <br>
+
 
         <script>
 
