--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
     <head>
         <title>Beach income checking</title>
+        <style>
+            li{
+                color: orange;
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
         <h3>Beach income checking</h3>
-
+        <b>Note: default = 0</b>
 
         <ul>
             <li>開店飲料</li>
@@ -82,7 +88,7 @@
         </ul>
 
         <br>
-        <b>實收(收店時錢袋總金額) : </b>
+        <b style="color: crimson; font-size: 18px;">實收(收店時錢袋總金額) : </b>
         <input type="number" name="name" placeholder="money" id="finalMoney">
         <br>
 
