ver6 fix balence bug

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 exact_income_output.innerHTML = final_money
 
                 // balence
-                balence.innerHTML = Number(final_money_input.value) - income;
+                balence.innerHTML = final_money - income;
             })
 
 
